<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_label">
    
    <PreferenceScreen 
        android:title="@string/settings_comm_label">
        
		<PreferenceCategory android:title="@string/set_cast_and_port">
			<ListPreference
				android:key="cast_type"
				android:title="@string/cast_type_title"
				android:summary="@string/cast_type_summary"
				android:entries="@array/cast_types"
				android:entryValues="@array/cast_types_values"
				android:defaultValue="0" />
			<EditTextPreference 
				android:key="port"
				android:title="@string/port_title"
				android:summary="@string/port_summary"
				android:defaultValue="@string/port_default"
				android:singleLine="true"
				android:inputType="phone" />
		</PreferenceCategory>	
				
		<PreferenceCategory android:title="@string/set_ip_addr">
			<EditTextPreference 
				android:key="broadcast_addr"
				android:title="@string/broadcast_addr_title"
				android:summary="@string/broadcast_addr_summary"
				android:defaultValue="@string/broadcast_addr_default"
				android:singleLine="true"
				android:inputType="phone" />					
			<EditTextPreference 
				android:key="multicast_addr"
				android:title="@string/multicast_addr_title"
				android:summary="@string/multicast_addr_summary"
				android:defaultValue="@string/multicast_addr_default"
				android:singleLine="true"
				android:inputType="phone" />		
			<EditTextPreference 
				android:key="unicast_addr"
				android:title="@string/unicast_addr_title"
				android:summary="@string/unicast_addr_summary"
				android:defaultValue="@string/unicast_addr_default"
				android:singleLine="true"
				android:inputType="phone" />
		</PreferenceCategory>
        
    </PreferenceScreen>

    <PreferenceScreen 
        android:title="@string/settings_audio_label">
        
		<CheckBoxPreference 
			android:key="use_speex"
			android:title="@string/use_speex_title"
			android:defaultValue="true"
			android:summaryOn="@string/use_speex_on"
			android:summaryOff="@string/use_speex_off" />								
		
		<ListPreference 
			android:key="speex_quality"
			android:dependency="use_speex"
			android:title="@string/speex_quality_title"
			android:summary="@string/speex_quality_summary"
			android:entries="@array/speex_quality"
			android:entryValues="@array/speex_quality_values"
			android:defaultValue="2" />		
			
		<CheckBoxPreference 
			android:key="echo"
			android:title="@string/echo_title"
			android:defaultValue="false"
			android:summaryOn="@string/echo_on"
			android:summaryOff="@string/echo_off" />
		        
    </PreferenceScreen>
    
    <ListPreference 
		android:key="speak_mode"		
		android:title="@string/speak_mode_title"
		android:summary="@string/speak_mode_summary"
		android:entries="@array/speak_mode"
		android:entryValues="@array/speak_mode_values"
		android:defaultValue="0" />
    
    <Preference 
        android:key="reset"
        android:title="@string/reset_label" />	
        			
</PreferenceScreen>
